[gd_scene load_steps=13 format=3 uid="uid://dfdebsk7whaun"]

[ext_resource type="Script" path="res://scripts/gameplay/shooting/shooting_hit_scan.gd" id="1_352j4"]
[ext_resource type="Material" uid="uid://c2aotiivrdtm0" path="res://materials/fireball_material.tres" id="2_qavyc"]
[ext_resource type="AudioStream" uid="uid://b723x7ge25gdg" path="res://audio/sfx/fireball_hit.ogg" id="3_tctog"]
[ext_resource type="AudioStream" uid="uid://b1scvfqt4hvcb" path="res://audio/sfx/fireball.ogg" id="4_7vudb"]

[sub_resource type="Gradient" id="Gradient_6csgs"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_tg2um"]
gradient = SubResource("Gradient_6csgs")

[sub_resource type="Curve" id="Curve_8ww5y"]
_data = [Vector2(0, 1), 0.0, -2.59341, 0, 0, Vector2(1, 0), -0.0489917, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_5t2r8"]
curve = SubResource("Curve_8ww5y")

[sub_resource type="Curve" id="Curve_iig5w"]
_data = [Vector2(0, 1), 0.0, 0.124711, 0, 0, Vector2(1, 0), -2.07878, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_qyouk"]
curve = SubResource("Curve_iig5w")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_05g06"]
lifetime_randomness = 0.5
emission_shape = 1
emission_sphere_radius = 0.2
direction = Vector3(0, 0, 0)
radial_velocity_min = 8.0
radial_velocity_max = 16.0
radial_velocity_curve = SubResource("CurveTexture_5t2r8")
gravity = Vector3(0, 0, 0)
scale_max = 2.0
scale_curve = SubResource("CurveTexture_qyouk")
color_ramp = SubResource("GradientTexture1D_tg2um")

[sub_resource type="SphereMesh" id="SphereMesh_bvt20"]
material = ExtResource("2_qavyc")
radius = 0.1
height = 0.2

[node name="Shooting" type="Node3D"]
script = ExtResource("1_352j4")
hit_scan_mask = 35
current_ammo = 100

[node name="HitParticles" type="GPUParticles3D" parent="."]
cast_shadow = 0
emitting = false
amount = 16
lifetime = 0.5
one_shot = true
explosiveness = 1.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_05g06")
draw_pass_1 = SubResource("SphereMesh_bvt20")

[node name="HitSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_tctog")

[node name="ShootSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_7vudb")
